--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -17,12 +17,17 @@
   margin-bottom: 2rem;
 }
 
-.login > mat-form-field,
-button {
-  width: 80%;
-  margin: 0.5rem 0;
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-button {
+form * {
+  width: 85%;
+}
+
+form button {
   height: 50px;
 }
