--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,11 +11,11 @@
     <form [formGroup]="form" (ngSubmit)="login()">
       <h2>Iniciar Sesión</h2>
       <mat-form-field>
-        <mat-label>User</mat-label>
+        <mat-label>Usuario</mat-label>
         <input matInput type="text" autocomplete="off" formControlName="user" />
       </mat-form-field>
       <mat-form-field>
-        <mat-label>Password</mat-label>
+        <mat-label>Contraseña</mat-label>
         <input matInput type="password" formControlName="password" />
       </mat-form-field>
       <br />
