--- a/src/app/components/dashboard-module/users/users.component.html
+++ b/src/app/components/dashboard-module/users/users.component.html
@@ -2,28 +2,56 @@
   <span>Usuarios</span>
 </mat-toolbar>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <!-- Position Column -->
   <ng-container matColumnDef="user">
     <th mat-header-cell *matHeaderCellDef>Usuario</th>
-    <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.user }}</td>
   </ng-container>
 
-  <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>Nombre</th>
     <td mat-cell *matCellDef="let element">{{ element.name }}</td>
   </ng-container>
 
-  <!-- Weight Column -->
   <ng-container matColumnDef="lastName">
     <th mat-header-cell *matHeaderCellDef>Apellido</th>
-    <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
   </ng-container>
 
-  <!-- Symbol Column -->
   <ng-container matColumnDef="sex">
     <th mat-header-cell *matHeaderCellDef>Sexo</th>
-    <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.gender }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef style="text-align: center">
+      Editar / Eliminar
+    </th>
+    <td mat-cell *matCellDef="let element" class="actions">
+      <button
+        mat-icon-button
+        aria-hidden="false"
+        aria-label="Editar"
+        class="search"
+      >
+        <mat-icon>search</mat-icon>
+      </button>
+      <button
+        mat-icon-button
+        aria-hidden="false"
+        aria-label="Editar"
+        class="edit"
+      >
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button
+        mat-icon-button
+        aria-hidden="false"
+        aria-label="Editar"
+        class="delete"
+      >
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
