--- a/src/app/components/dashboard-module/users/users.component.css
+++ b/src/app/components/dashboard-module/users/users.component.css
@@ -1,6 +1,16 @@
+.container {
+  display: flex;
+  flex-direction: column;
+}
 mat-toolbar {
   margin-bottom: 0.75rem;
   border-radius: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+mat-form-field {
+  width: 40%;
+  margin-top: 1.25rem;
 }
 .actions {
   display: flex;
