--- a/src/app/components/dashboard-module/users/users.component.html
+++ b/src/app/components/dashboard-module/users/users.component.html
@@ -1,62 +1,74 @@
-<mat-toolbar class="mat-elevation-z1">
-  <span>Usuarios</span>
-</mat-toolbar>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <ng-container matColumnDef="user">
-    <th mat-header-cell *matHeaderCellDef>Usuario</th>
-    <td mat-cell *matCellDef="let element">{{ element.user }}</td>
-  </ng-container>
+<div class="container">
+  <mat-toolbar class="mat-elevation-z1">
+    <span>Usuarios</span>
+    <mat-form-field>
+      <mat-label>Filtrar</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Ex. ium"
+        autocomplete="off"
+      />
+    </mat-form-field>
+  </mat-toolbar>
 
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Nombre</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-  </ng-container>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="user">
+      <th mat-header-cell *matHeaderCellDef>Usuario</th>
+      <td mat-cell *matCellDef="let element">{{ element.user }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="lastName">
-    <th mat-header-cell *matHeaderCellDef>Apellido</th>
-    <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
-  </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="sex">
-    <th mat-header-cell *matHeaderCellDef>Sexo</th>
-    <td mat-cell *matCellDef="let element">{{ element.gender }}</td>
-  </ng-container>
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef>Apellido</th>
+      <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef style="text-align: center">
-      Acciones
-    </th>
-    <td mat-cell *matCellDef="let element" class="actions">
-      <button
-        mat-icon-button
-        matTooltip="Ver"
-        aria-hidden="false"
-        aria-label="Ver"
-        class="search"
-      >
-        <mat-icon>search</mat-icon>
-      </button>
-      <button
-        mat-icon-button
-        matTooltip="Editar"
-        aria-hidden="false"
-        aria-label="Editar"
-        class="edit"
-      >
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button
-        mat-icon-button
-        matTooltip="Eliminar"
-        aria-hidden="false"
-        aria-label="Eliminar"
-        class="delete"
-      >
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="sex">
+      <th mat-header-cell *matHeaderCellDef>Sexo</th>
+      <td mat-cell *matCellDef="let element">{{ element.gender }}</td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef style="text-align: center">
+        Acciones
+      </th>
+      <td mat-cell *matCellDef="let element" class="actions">
+        <button
+          mat-icon-button
+          matTooltip="Ver"
+          aria-hidden="false"
+          aria-label="Ver"
+          class="search"
+        >
+          <mat-icon>search</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          matTooltip="Editar"
+          aria-hidden="false"
+          aria-label="Editar"
+          class="edit"
+        >
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          matTooltip="Eliminar"
+          aria-hidden="false"
+          aria-label="Eliminar"
+          class="delete"
+        >
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
