--- a/src/app/components/dashboard-module/dashboard.component.html
+++ b/src/app/components/dashboard-module/dashboard.component.html
@@ -1,4 +1,9 @@
-<app-navbar></app-navbar>
 <div class="container">
-  <router-outlet></router-outlet>
+  <app-navbar></app-navbar>
+  <aside>
+    <app-sidebar></app-sidebar>
+  </aside>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
 </div>
