--- a/src/app/components/dashboard-module/orden-ingreso/orden-ingreso.component.html
+++ b/src/app/components/dashboard-module/orden-ingreso/orden-ingreso.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <mat-toolbar class="mat-elevation-z1">
-    <span>Usuarios</span>
+    <span>Ordenes de Ingreso</span>
     <mat-form-field>
-      <mat-label>Filtrar</mat-label>
+      <mat-label>Buscar</mat-label>
       <input
         matInput
         (keyup)="applyFilter($event)"
@@ -71,4 +71,12 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+
+  <button
+    mat-icon-button
+    matTooltip="Agregar Orden de Ingreso"
+    class="add-button"
+  >
+    <mat-icon>add_circle</mat-icon>
+  </button>
 </div>
