--- a/src/app/components/dashboard-module/expediente/expediente.component.html
+++ b/src/app/components/dashboard-module/expediente/expediente.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-toolbar class="mat-elevation-z1">
-    <span>Ordenes de Ingreso</span>
+    <span>Expediente Médico</span>
     <mat-form-field>
       <mat-label>Buscar</mat-label>
       <input
@@ -23,19 +23,19 @@
       <td mat-cell *matCellDef="let element">{{ element.id }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="motivo">
-      <th mat-header-cell *matHeaderCellDef>Motivo</th>
-      <td mat-cell *matCellDef="let element">{{ element.motivo }}</td>
+    <ng-container matColumnDef="sexo">
+      <th mat-header-cell *matHeaderCellDef>Sexo</th>
+      <td mat-cell *matCellDef="let element">{{ element.sexo }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="sintomas">
-      <th mat-header-cell *matHeaderCellDef>Sintomas</th>
-      <td mat-cell *matCellDef="let element">{{ element.sintomas }}</td>
+    <ng-container matColumnDef="direccion">
+      <th mat-header-cell *matHeaderCellDef>Direccion</th>
+      <td mat-cell *matCellDef="let element">{{ element.direccion }}</td>
     </ng-container>
-    <ng-container matColumnDef="fecha">
-      <th mat-header-cell *matHeaderCellDef>Fecha</th>
+    <ng-container matColumnDef="enfermedades">
+      <th mat-header-cell *matHeaderCellDef>Enfermedades</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.fecha | date : "dd/MM/yyyy" }}
+        {{ element.enfermedades }}
       </td>
     </ng-container>
 
@@ -78,11 +78,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <button
-    mat-icon-button
-    matTooltip="Agregar Orden de Ingreso"
-    class="add-button"
-  >
+  <button mat-icon-button matTooltip="Agregar Expediente" class="add-button">
     <mat-icon>add_circle</mat-icon>
   </button>
 </div>
