--- a/src/app/components/dashboard-module/sidebar/sidebar.component.css
+++ b/src/app/components/dashboard-module/sidebar/sidebar.component.css
@@ -1,10 +1,14 @@
 .buttons-container {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  border-right: solid 2px #f1f1f1;
 }
 
 .buttons-container > button {
   width: 100%;
   height: 65px;
   font-size: 1.15rem;
+  display: grid;
+  grid-template-columns: 20% 80%;
 }
