--- a/src/app/components/dashboard-module/tratamiento/tratamiento.component.html
+++ b/src/app/components/dashboard-module/tratamiento/tratamiento.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-toolbar class="mat-elevation-z1">
-    <span>Ordenes de Ingreso</span>
+    <span>Tratamiento</span>
     <mat-form-field>
       <mat-label>Buscar</mat-label>
       <input
@@ -18,24 +18,24 @@
       <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>Carnet de Identidad</th>
-      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    <ng-container matColumnDef="enfermedad">
+      <th mat-header-cell *matHeaderCellDef>Enfermedad</th>
+      <td mat-cell *matCellDef="let element">{{ element.enfermedad }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="motivo">
-      <th mat-header-cell *matHeaderCellDef>Motivo</th>
-      <td mat-cell *matCellDef="let element">{{ element.motivo }}</td>
+    <ng-container matColumnDef="aplicacion">
+      <th mat-header-cell *matHeaderCellDef>Aplicacion</th>
+      <td mat-cell *matCellDef="let element">{{ element.aplicacion }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="sintomas">
-      <th mat-header-cell *matHeaderCellDef>Sintomas</th>
-      <td mat-cell *matCellDef="let element">{{ element.sintomas }}</td>
+    <ng-container matColumnDef="medicameto">
+      <th mat-header-cell *matHeaderCellDef>Medicameto</th>
+      <td mat-cell *matCellDef="let element">{{ element.medicameto }}</td>
     </ng-container>
-    <ng-container matColumnDef="fecha">
-      <th mat-header-cell *matHeaderCellDef>Fecha</th>
+    <ng-container matColumnDef="edad">
+      <th mat-header-cell *matHeaderCellDef>Edad</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.fecha | date : "dd/MM/yyyy" }}
+        {{ element.edad }}
       </td>
     </ng-container>
 
@@ -78,11 +78,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <button
-    mat-icon-button
-    matTooltip="Agregar Orden de Ingreso"
-    class="add-button"
-  >
+  <button mat-icon-button matTooltip="Agregar Tratamiento" class="add-button">
     <mat-icon>add_circle</mat-icon>
   </button>
 </div>
