--- a/src/app/pages/expediente/expediente.component.html
+++ b/src/app/pages/expediente/expediente.component.html
@@ -15,7 +15,9 @@
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="nombre">
       <th mat-header-cell *matHeaderCellDef>Nombre</th>
-      <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.nombre }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="id">
@@ -43,7 +45,7 @@
       <th mat-header-cell *matHeaderCellDef style="text-align: center">
         Acciones
       </th>
-      <td mat-cell *matCellDef="let element" class="actions">
+      <td mat-cell *matCellDef="let element; let i = index" class="actions">
         <button
           mat-icon-button
           matTooltip="Ver"
@@ -68,6 +70,7 @@
           aria-hidden="false"
           aria-label="Eliminar"
           class="delete"
+          (click)="eliminarExpediente(i)"
         >
           <mat-icon>delete</mat-icon>
         </button>
