--- a/src/app/pages/orden-ingreso/orden-ingreso.component.html
+++ b/src/app/pages/orden-ingreso/orden-ingreso.component.html
@@ -83,6 +83,7 @@
     mat-icon-button
     matTooltip="Agregar Orden de Ingreso"
     class="add-button"
+    (click)="openFormDialog()"
   >
     <mat-icon>add_circle</mat-icon>
   </button>
