--- a/src/app/components/dashboard-module/navbar/navbar.component.css
+++ b/src/app/components/dashboard-module/navbar/navbar.component.css
@@ -3,3 +3,15 @@ mat-toolbar {
   justify-content: space-between;
   align-items: center;
 }
+
+.auth-options {
+  width: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.auth-options a {
+  text-decoration: none;
+  height: auto;
+}
