--- a/src/app/pages/tratamiento/tratamiento.component.html
+++ b/src/app/pages/tratamiento/tratamiento.component.html
@@ -59,6 +59,7 @@
           aria-hidden="false"
           aria-label="Editar"
           class="edit"
+          (click)="editarTratamiento(i)"
         >
           <mat-icon>edit</mat-icon>
         </button>
@@ -79,7 +80,12 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <button mat-icon-button matTooltip="Agregar Tratamiento" class="add-button">
+  <button
+    mat-icon-button
+    matTooltip="Agregar Tratamiento"
+    class="add-button"
+    (click)="openFormDialog('Agregado')"
+  >
     <mat-icon>add_circle</mat-icon>
   </button>
 </div>
