--- a/src/app/components/dashboard-module/navbar/navbar.component.html
+++ b/src/app/components/dashboard-module/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar color="primary">
-  <span>AppUsers</span>
+  <div class="banner">
+    <img src="../../../../assets/images/saludpublica.jpeg" alt="" />
+    <span>Gestion Hospitalaria</span>
+  </div>
   <div class="auth-options">
     @if(currentUser) {
     <a href="/dashboard">{{ currentUser.email }}</a>
