--- a/src/app/pages/expediente/expediente.component.html
+++ b/src/app/pages/expediente/expediente.component.html
@@ -65,6 +65,7 @@
         >
           <mat-icon>edit</mat-icon>
         </button>
+        @if (isAdmin()) {
         <button
           mat-icon-button
           matTooltip="Eliminar"
@@ -75,6 +76,7 @@
         >
           <mat-icon>delete</mat-icon>
         </button>
+        }
       </td>
     </ng-container>
 
