--- a/src/app/pages/tratamiento/tratamiento.component.html
+++ b/src/app/pages/tratamiento/tratamiento.component.html
@@ -63,6 +63,7 @@
         >
           <mat-icon>edit</mat-icon>
         </button>
+        @if(isAdmin()) {
         <button
           mat-icon-button
           matTooltip="Eliminar"
@@ -73,6 +74,7 @@
         >
           <mat-icon>delete</mat-icon>
         </button>
+        }
       </td>
     </ng-container>
 
