--- a/src/app/pages/expediente/expediente.component.css
+++ b/src/app/pages/expediente/expediente.component.css
@@ -4,9 +4,10 @@
 }
 mat-toolbar {
   margin-bottom: 0.75rem;
-  border-radius: 0 0 8px 8px;
+  border-radius: 8px;
   display: flex;
   justify-content: space-between;
+  background-color: #3abdcf;
 }
 mat-form-field {
   width: 40%;
