--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -5,12 +5,24 @@
   align-items: center;
   background-color: #f5f5f5;
   color: #673ab7;
+  background-image: url("../../../assets/images/hospital.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .login {
   width: 100%;
   max-width: 330px;
   text-align: center;
+  border: #673ab7 solid 2px;
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+  -webkit-box-shadow: 10px 7px 83px 28px rgba(0, 0, 0, 0.67);
+  -moz-box-shadow: 10px 7px 83px 28px rgba(0, 0, 0, 0.67);
+  box-shadow: 10px 7px 83px 28px rgba(0, 0, 0, 0.67);
 }
 
 .login img {
@@ -27,11 +39,14 @@ form {
 form * {
   width: 85%;
 }
-
-form button {
+form > button {
   height: 50px;
 }
 
 .spinner {
   margin: 0 auto;
+}
+
+.button-hide {
+  margin-right: 20px;
 }
