--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,48 +1,57 @@
-<div class="container">
-  @if (loading) {
-  <mat-spinner class="spinner"></mat-spinner>
-  } @else {
-  <div class="login">
-    <img
-      src="./assets/images/login-image.png"
-      alt="login-user-image"
-      width="50%"
-    />
-    <form [formGroup]="form" (ngSubmit)="login()">
-      <h2>Iniciar Sesión</h2>
-      <mat-form-field>
-        <mat-label>Usuario</mat-label>
-        <input matInput type="text" autocomplete="off" formControlName="user" />
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Enter your password</mat-label>
-        <input
-          matInput
-          [type]="hide ? 'password' : 'text'"
-          formControlName="password"
-        />
-        <button
-          mat-icon-button
-          matSuffix
-          type="button"
-          class="button-hide"
-          (click)="hide = !hide"
-          [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="hide"
-        >
-          <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+<div class="container h-100 d-flex justify-content-center align-items-center">
+  <div class="card" *ngIf="!loading; else loadingSpinner">
+    <div class="card-body">
+      <img
+        src="./assets/images/login-image.png"
+        alt="login-user-image"
+        class="mb-4"
+        width="50%"
+      />
+      <form [formGroup]="form" (ngSubmit)="login()">
+        <h2 class="text-center">Iniciar Sesión</h2>
+        <div class="form-group">
+          <label for="user">Usuario</label>
+          <input
+            type="text"
+            class="form-control"
+            id="user"
+            formControlName="user"
+            autocomplete="off"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Contraseña</label>
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            formControlName="password"
+          />
+          <button
+            type="button"
+            class="btn btn-light btn-sm"
+            (click)="hide = !hide"
+          >
+            <i
+              class="fa"
+              [ngClass]="{ 'fa-eye': hide, 'fa-eye-slash': !hide }"
+            ></i>
+          </button>
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="form.invalid">
+          Login
         </button>
-      </mat-form-field>
-      <br />
-      <button
-        mat-raised-button
-        color="primary"
-        type="submit"
-        [disabled]="form.invalid"
-      >
-        Login
-      </button>
-    </form>
+      </form>
+    </div>
   </div>
-  }
+  <ng-template #loadingSpinner>
+    <div
+      class="d-flex justify-content-center align-items-center"
+      style="height: 100vh"
+    >
+      <div class="spinner-border text-primary" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+  </ng-template>
 </div>
