--- a/src/app/components/expediente-form/expediente-form.component.html
+++ b/src/app/components/expediente-form/expediente-form.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>
-  {{ isEditMode ? "Editar Orden de Ingreso" : "Agregar Orden de Ingreso" }}
+  {{ isEditMode ? "Editar Expediente Médico" : "Agregar Expediente Médico" }}
 </h2>
 <mat-dialog-content>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
