--- a/src/app/components/tratamiento-form/tratamiento-form.component.html
+++ b/src/app/components/tratamiento-form/tratamiento-form.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>
-  {{ isEditMode ? "Editar Orden de Ingreso" : "Agregar Orden de Ingreso" }}
+  {{ isEditMode ? "Editar Tratamiento" : "Agregar Tratamiento" }}
 </h2>
 <mat-dialog-content>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
