implemented expediente with API

--- a/src/app/components/expediente-form/expediente-form.component.html
+++ b/src/app/components/expediente-form/expediente-form.component.html
@@ -7,9 +7,9 @@
       <mat-label>Nombre</mat-label>
       <input matInput formControlName="nombre" />
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field disabled>
       <mat-label>Carnet de Identidad</mat-label>
-      <input matInput formControlName="id" />
+      <input matInput formControlName="ci" />
     </mat-form-field>
     <mat-form-field>
       <mat-label>Sexo</mat-label>
