--- a/src/app/pages/expediente/expediente.component.html
+++ b/src/app/pages/expediente/expediente.component.html
@@ -88,7 +88,7 @@
     mat-icon-button
     matTooltip="Agregar Expediente"
     class="add-button"
-    (click)="openFormDialog('Agregado')"
+    (click)="openFormDialog({ actionType: 'Agregado' })"
   >
     <mat-icon>add_circle</mat-icon>
   </button>
