manejando errores en el login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,13 @@
 <div class="container h-100 d-flex justify-content-center align-items-center">
-  <div class="card shadow-lg" *ngIf="!loading; else loadingSpinner">
+  @if (this.statusDetail === 'loading') {
+  <div
+    class="d-flex justify-content-center align-items-center"
+    style="height: 100vh"
+  >
+    <div class="spinner-border text-primary" role="status"></div>
+  </div>
+  }@else{
+  <div class="card shadow-lg">
     <div class="card-body d-flex justify-content-center align-items-center">
       <img
         src="./assets/images/login-image.png"
@@ -38,12 +46,5 @@
       </form>
     </div>
   </div>
-  <ng-template #loadingSpinner>
-    <div
-      class="d-flex justify-content-center align-items-center"
-      style="height: 100vh"
-    >
-      <div class="spinner-border text-primary" role="status"></div>
-    </div>
-  </ng-template>
+  }
 </div>
