--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,41 +1,103 @@
-<div class="container h-100 d-flex justify-content-center align-items-center">
-  <div class="card shadow-lg">
-    <div class="card-body d-flex justify-content-center align-items-center">
+<div class="background"></div>
+<div class="centering">
+  <form class="my-form" [formGroup]="form" (ngSubmit)="signup()">
+    <div class="signup-welcome-row">
       <img
-        src="./assets/images/signup-image.png"
-        alt="signup-user-image"
-        class="mb-4"
-        width="50%"
+        class="signup-welcome"
+        alt="Logo"
+        src="../../../assets/images/saludpublica.jpeg"
       />
-      <form [formGroup]="form" (ngSubmit)="signup()" class="w-100">
-        <h2 class="text-center font-weight-bold">Registrarse</h2>
-        <div class="form-group">
-          <label for="user">Usuario</label>
-          <input
-            type="text"
-            class="form-control"
-            id="user"
-            formControlName="user"
-            autocomplete="off"
-          />
-        </div>
-        <div class="form-group">
-          <label for="password">Contraseña</label>
-          <input
-            type="password"
-            class="form-control"
-            id="password"
-            formControlName="password"
-          />
-        </div>
-        <button
-          type="submit"
-          class="btn btn-primary mt-3 cursor-pointer"
-          [disabled]="form.invalid"
-        >
-          Registrarse
-        </button>
-      </form>
+      <h1>Sign Up!</h1>
     </div>
-  </div>
+    <div class="socials-row">
+      <a href="/" title="Use Google">
+        <img src="../../../assets/images/google.png" alt="Google" />
+        Use Google
+      </a>
+      <a href="/" title="Use Facebook">
+        <img src="../../../assets/images/facebook.png" alt="Facebook" />
+        Use Facebook
+      </a>
+    </div>
+    <div class="divider">
+      <div class="divider-line"></div>
+      OR
+      <div class="divider-line"></div>
+    </div>
+    <div class="my-form__content">
+      <div class="text-field">
+        <label for="email">Email:</label>
+        <input
+          aria-label="Email"
+          type="email"
+          id="email"
+          name="email"
+          formControlName="email"
+          placeholder="Your Email"
+          autocomplete="off"
+          required
+        />
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-mail"
+          width="44"
+          height="44"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="#A7A2CB"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"
+          />
+          <path d="M3 7l9 6l9 -6" />
+        </svg>
+      </div>
+      <div class="text-field">
+        <label for="password"
+          >Password:
+          <input
+            id="password"
+            type="password"
+            name="password"
+            formControlName="password"
+            placeholder="Your Password"
+            required
+          />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path
+              d="M5 13a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v6a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-6z"
+            ></path>
+            <path d="M11 16a1 1 0 1 0 2 0a1 1 0 0 0 -2 0"></path>
+            <path d="M8 11v-4a4 4 0 1 1 8 0v4"></path>
+          </svg>
+        </label>
+      </div>
+      <button type="submit" class="my-form__button">Sign-Up</button>
+    </div>
+    <div class="my-form__actions">
+      <div>
+        By registering you agree to our
+        <a href="" title="Reset Password">Terms</a>
+        and <a href="" title="Reset Password">Privacy</a>
+      </div>
+      <div class="my-form__signin">
+        <a href="#" title="Sign In">Sign-in</a>
+      </div>
+    </div>
+  </form>
 </div>
