--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -10,11 +10,11 @@
       <h1>Sign Up!</h1>
     </div>
     <div class="socials-row">
-      <a href="/" title="Use Google">
+      <a title="Use Google">
         <img src="../../../assets/images/google.png" alt="Google" />
         Use Google
       </a>
-      <a href="/" title="Use Facebook">
+      <a title="Use Facebook">
         <img src="../../../assets/images/facebook.png" alt="Facebook" />
         Use Facebook
       </a>
@@ -92,11 +92,11 @@
     <div class="my-form__actions">
       <div>
         By registering you agree to our
-        <a href="" title="Reset Password">Terms</a>
-        and <a href="" title="Reset Password">Privacy</a>
+        <a title="Reset Password">Terms</a>
+        and <a title="Reset Password">Privacy</a>
       </div>
       <div class="my-form__signin">
-        <a href="#" title="Sign In">Sign-in</a>
+        <a routerLink="/login" title="Sign In">Sign-in</a>
       </div>
     </div>
   </form>
