--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,50 +1,99 @@
-<div class="container h-100 d-flex justify-content-center align-items-center">
-  @if (this.statusDetail === 'loading') {
-  <div
-    class="d-flex justify-content-center align-items-center"
-    style="height: 100vh"
-  >
-    <div class="spinner-border text-primary" role="status"></div>
-  </div>
-  }@else{
-  <div class="card shadow-lg">
-    <div class="card-body d-flex justify-content-center align-items-center">
-      <img
-        src="./assets/images/login-image.png"
-        alt="login-user-image"
-        class="mb-4"
-        width="50%"
-      />
-      <form [formGroup]="form" (ngSubmit)="login()" class="w-100">
-        <h2 class="text-center font-weight-bold">Iniciar Sesión</h2>
-        <div class="form-group">
-          <label for="user">Usuario</label>
-          <input
-            type="text"
-            class="form-control"
-            id="user"
-            formControlName="user"
-            autocomplete="off"
-          />
-        </div>
-        <div class="form-group">
-          <label for="password">Contraseña</label>
-          <input
-            type="password"
-            class="form-control"
-            id="password"
-            formControlName="password"
-          />
-        </div>
-        <button
-          type="submit"
-          class="btn btn-primary mt-3 cursor-pointer"
-          [disabled]="form.invalid"
-        >
-          Login
-        </button>
-      </form>
-    </div>
-  </div>
-  }
+@if (this.statusDetail === 'loading') {
+<div
+  class="d-flex justify-content-center align-items-center"
+  style="height: 100vh"
+>
+  <div class="spinner-border text-primary" role="status"></div>
 </div>
+}@else{
+<div class="background">
+  <form class="my-form" [formGroup]="form" (ngSubmit)="login()">
+    <div class="login-welcome-row">
+      <a title="Logo">
+        <img
+          src="../../../assets/images/saludpublica.jpeg"
+          alt="Logo"
+          class="logo"
+        />
+      </a>
+      <h1>Welcome back 👋</h1>
+      <p>Please enter your details!</p>
+    </div>
+    <div class="input__wrapper">
+      <input
+        type="email"
+        id="email"
+        name="email"
+        formControlName="email"
+        class="input__field"
+        placeholder="Your Email"
+        required
+        autocomplete="off"
+      />
+      <label for="email" class="input__label">Email:</label>
+      <svg
+        class="input__icon"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0"></path>
+        <path d="M16 12v1.5a2.5 2.5 0 0 0 5 0v-1.5a9 9 0 1 0 -5.5 8.28"></path>
+      </svg>
+    </div>
+    <div class="input__wrapper">
+      <input
+        id="password"
+        type="password"
+        formControlName="password"
+        class="input__field"
+        placeholder="Your Password"
+        title="Minimum 6 characters at least 1 Alphabet and 1 Number"
+        pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$"
+        required
+        autocomplete="off"
+      />
+      <label for="password" class="input__label"> Password </label>
+      <svg
+        class="input__icon"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path
+          d="M5 13a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v6a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-6z"
+        ></path>
+        <path d="M11 16a1 1 0 1 0 2 0a1 1 0 0 0 -2 0"></path>
+        <path d="M8 11v-4a4 4 0 1 1 8 0v4"></path>
+      </svg>
+    </div>
+    <button type="submit" class="my-form__button">Login</button>
+    <div class="socials-row">
+      <a title="Use Google">
+        <img src="../../../assets/images/google.png" alt="Google" />
+        Log in with Google
+      </a>
+    </div>
+    <div class="my-form__actions">
+      <div class="my-form__row">
+        <span>Don't have an account?</span>
+        <a routerLink="/sign-up" title="Create Account"> Sign Up </a>
+      </div>
+    </div>
+  </form>
+</div>
+}
