--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,15 @@
   --primary-hover: #7771f7;
   --text: #383740;
   --text-lighter: #71707d;
+  --primary: #605dff;
+  --primary-dark: #4a00e0;
+  --primary-light: #5da8ff;
+  --secondary: #1d1d1d;
+  --social-background: #e9e9e9;
+  --social-background-hover: #dddddd;
+  --text: #1f2346;
+  --white: #ffffff;
+  --violet: #8e2de2;
 }
 * {
   margin: 0;
