added sesion logout

--- a/src/app/components/dashboard-module/navbar/navbar.component.html
+++ b/src/app/components/dashboard-module/navbar/navbar.component.html
@@ -13,6 +13,7 @@
         aria-label="Cerrar sesión"
         type="button"
         matTooltip="Cerrar Sesión"
+        (click)="sesionLogout()"
       >
         <mat-icon>logout</mat-icon>
       </button>
